<resources>
    <string name="app_name">Calculator</string>
    <string name="_10_10">10+10</string>
    <string name="_20">20</string>
    <string name="addorsub">+/-</string>
    <string name="brackets">()</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="x">x</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sub">_</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Addition">+</string>
    <string name="c">c</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>